Velocity variable ref tweak

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
@@ -4,7 +4,7 @@
 #set($success = $filters.put($primaryKey, "$sessionRowId"))
 #set($reportDataRows = $view.getReportDataRows($report, 100, $filters, true))##
 #if($reportDataRows.size() > 0)
-<div class="slide reportDataView" id="slide_$internalTableName()_$dependentTable.getInternalTableName()_$sessionRowId">
+<div class="slide reportDataView" id="slide_$internalTableName_$dependentTable.getInternalTableName()_$sessionRowId">
   <img class="rewind" src="resources/edit_nav/rewind.png" />
   <section class="middle"> 
     <div class="title">
