--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -40,7 +40,7 @@
               #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable))
                 #foreach($report in $dependentTable.getReports())
                   #if(($view.loggedInUserAllowedToViewReport($report)) && ($report.getReportBaseFields().contains($primaryKey)) && (!$report.getReportName().contains("dbvcalc")) && (!$report.getReportName().contains("dbvcrit")))
-                    <div class="dependent_table" id="dependent_table_${internalTableName}_${dependentTable.getInternalTableName()}_$rowId">
+                    <div class="dependent_table" internaltablename="$internalTableName" id="dependent_table_${internalTableName}_${dependentTable.getInternalTableName()}_$rowId">
                       <h1><span class="count"></span>$dependentTable.getSimpleName()</h1>
                       <div class="record_snippets">
                       </div>
@@ -56,7 +56,7 @@
             #if($field.getFieldCategory() == "REFERENCED_REPORT_DATA")
               #set($referencedReport = $field.getReferencedReport())
               #set($referencedTable = $referencedReport.getParentTable())
-              <div class="dependent_table cross_reference" id="dependent_table_${internalTableName}_${referencedTable.getInternalTableName()}_$rowId">
+              <div class="dependent_table cross_reference" internaltablename="$internalTableName" id="dependent_table_${internalTableName}_${referencedTable.getInternalTableName()}_$rowId">
                 <h1><span class="count"></span>$field</h1>
                 <div class="record_snippets">
                 </div>
