--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -3,7 +3,7 @@
 #set($filterString = $sessionData.getGlobalFilterString($report))
 <div id="navrow">
   #set($placeholder = $report.getReportName().replaceAll(" - .*",""))
-  <input id="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
+  <input id="searchbox" class="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
   <div id="jumpto">
   <span class="jump_label">Jump to: </span>
   #foreach($table in $view.getPopularTables($view.getLoggedInUser()))
