--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -1,4 +1,14 @@
 #set($report = $sessionData.getReport())
+#if($report.equals($table.getDefaultReport()))
+  ## Don't start with a 'raw table' report
+  #set($tableReports = $table.getReports())
+  #foreach($tableReport in $tableReports)
+    #if((!$tableReport.equals($table.getDefaultReport())) && ($view.loggedInUserAllowedToViewReport($tableReport)) && (!$tableReport.getReportName().contains("dbvcalc")) && (!$tableReport.getReportName().contains("dbvcrit")))
+      #set($report = $tableReport)
+      #break
+    #end
+  #end
+#end
 <div class="breadcrumb_title">$report</div>
 #set($filterString = $sessionData.getGlobalFilterString($report))
 <div id="navrow">
