Don't use raw tables in card view: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -1,4 +1,5 @@
 #set($report = $sessionData.getReport())
+#set($table = $report.getParentTable())
 #if($report.equals($table.getDefaultReport()))
   ## Don't start with a 'raw table' report
   #set($tableReports = $table.getReports())
