Slide usability enhancements: related data headers

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -377,6 +377,7 @@ a.jumpto_table.current {
 .related_header {
   color: white;
   background-color: #486f98;
+  font-weight: bold;
 }
 
 img.go_right {
