Slide usability enhancements: related data headers

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -378,6 +378,7 @@ a.jumpto_table.current {
   color: white;
   background-color: #486f98;
   font-weight: bold;
+  border: 1px solid #ff8040;
 }
 
 img.go_right {
