--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -157,14 +157,14 @@ body {
 }
 
 .dependent_table.cross_reference {
-  border-top: 1px solid rgba(255, 128, 64, 0.4); /* aB orange, 40% */
+  /* border-top: 1px solid rgba(255, 128, 64, 0.4); /* aB orange, 40% */
   /* border-left:  1px solid #ff8040;
   border-right:  1px solid #ff8040;  */
 }
 
 .dependent_table.cross_reference:last-child {
 	/* with above, forms collapsed borders */
-  border-bottom: 1px solid rgba(255, 128, 64, 0.4);
+  /* border-bottom: 1px solid rgba(255, 128, 64, 0.4); */
 }
 
 .dependent_table.active {
@@ -379,6 +379,7 @@ a.jumpto_table.current {
   background-color: #486f98;
   font-weight: bold;
   border: 1px solid #ff8040;
+  margin-bottom: 0.5em;
 }
 
 img.go_right {
