--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -147,6 +147,7 @@ body {
   float: right;
   text-shadow: none;
   margin-top: 1em;
+  padding-right: 0.5em;
 }
 
 .dependent_table {
@@ -378,7 +379,7 @@ a.jumpto_table.current {
   color: white;
   background-color: #486f98;
   font-weight: bold;
-  border: 1px solid #ff8040;
+  border-bottom: 1px solid #ff8040;
   margin-bottom: 0.5em;
 }
 
