--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
@@ -1,4 +1,5 @@
 ## requires $report, $sessionTable, $dependentTable
+#set($module = $report.getModule())
 #set($primaryKey = $sessionTable.getPrimaryKey())
 #set($filters = $viewTools.getNewFilterMap())
 #set($success = $filters.put($primaryKey, "$sessionRowId"))
@@ -15,7 +16,7 @@
     ##  #end
     ##  <option value="$dependentTable.getDefaultReport().getInternalReportName()">all records</option>
     ##</select>
-    $report.getModule() - $report
+    <img style="vertical-align: middle;" src="resources/icons/applications/tango/$module.getIconPath()"/> $report
     </div>
     #parse("gui/edit_nav/report_content.vm")
   </section>
