--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -44,7 +44,7 @@
               #parse("gui/edit_nav/relation_snippet.vm")
             #end
           #end
-          <div class="related_header">Add/view data</div>
+          <div class="related_header">Add / View data</div>
           ## dependent child tables
           #set($primaryKey = $sessionTable.getPrimaryKey())
           #set($dependentTables = $view.getDirectlyDependentTables($sessionTable))
