--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -1,5 +1,7 @@
 #set($edit_nav = true)
 #set($sessionTable = $sessionData.getTable())
+#set($sessionReport = $sessionData.getReport())
+#set($module = $sessionReport.getModule())
 #set($internalTableName = $sessionTable.getInternalTableName())
 #set($rowId = $sessionData.getRowId())
 #set($fields = $sessionTable.getFields())
@@ -28,6 +30,7 @@
   <div id="presentation-counter"></div> 
   <div class="slides">
     <div class="slide"> 
+      <img class="slide_icon" src="resources/icons/applications/tango/$module.getIconPath()" />
       <section class="middle"> 
         <div class="this_table">
           #parse("gui/reports_and_tables/tabs/edit.vm")
