--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -142,6 +142,13 @@ body {
   cursor: pointer;
 }
 
+.slide_icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
 .dependent_tables {
   width: 30%;
   float: right;
