Slide icon removal

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet.vm
@@ -20,7 +20,7 @@
   #end
 #end
 <div class="dependent_table related #if($active) active #end" id="dependent_relation_$sessionTable.getInternalTableName()_$relatedTable.getInternalTableName()" internaltablename="$relatedTable.getInternalTableName()" rowid="$relatedRowId">
-  <h1><span class="count"><img src="resources/edit_nav/up.png" alt="up" /></span>$field.getSimplifiedFieldName()#if($fieldDisplayValue != ""): $fieldDisplayValue#end</h1>
+  <h1><span class="count"><img src="resources/edit_nav/up.png" alt="up" /></span>$field.getSimplifiedFieldName()#if($fieldDisplayValue != ""): $fieldDisplayValue#end #if(!$active): none#end</h1>
   <div class="record_snippets">
     <div class="snippet">$snippet</div>
   </div>
