--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -76,6 +76,8 @@
               #set($referencedReport = $field.getReferencedReport())
               #set($referencedTable = $referencedReport.getParentTable())
               <div class="dependent_table cross_reference" internaltablename="$referencedTable.getInternalTableName()" id="dependent_table_${internalTableName}_${referencedTable.getInternalTableName()}_$rowId">
+                <img src="resources/edit_nav/new_flat.png" class="go_new" />
+                <img src="resources/edit_nav/right.png" class="go_right" />
                 <h1><span class="count"></span>$field</h1>
                 <div class="record_snippets">
                 </div>
