--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -57,9 +57,19 @@
     </td>
   </tr>
   <tr>
+    <td>Custom template:<br><span class="greytext"><i>Upload a custom printout or output template in HTML format (optional, will be available in addition to the standard record printout)</i></span></td>
+    <td>
+      <form class="fileUploader" method="POST" action="AppController.servlet">
+        <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
+        <input type="hidden" name="upload_custom_template" value="true" />
+        <input type="file" name="templatename" class="submit-trigger" onChange="uploadFile(this);" />
+      </form>
+    </td>
+  </tr>
+  <tr>
     <td>&nbsp;</td>
     <td>
-		      <input type=button value="Delete Report" onclick="parent.pane_1.document.location='AppController.servlet?return=gui/pane1&remove_report=true&internalreportname=$report.getInternalReportName()'">
+      <input type=button value="Delete Report" onclick="parent.pane_1.document.location='AppController.servlet?return=gui/pane1&remove_report=true&internalreportname=$report.getInternalReportName()'">
     </td>
   </tr>
 </table>
