--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -63,6 +63,10 @@
         <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
         <input type="hidden" name="upload_custom_template" value="true" />
         <input type="file" name="templatename" class="submit-trigger" onChange="uploadFile(this);" />
+        <div class="upload_progress_container">
+          <div class="upload_progress_bar"></div>
+          <span class="upload_info" upload_speed="$view.getUploadSpeed()"></span>
+        </div>
       </form>
     </td>
   </tr>
