--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
@@ -103,9 +103,11 @@
 		  var printoutType = jQuery(this).val();
 		  var jqIframe = jQuery("iframe#wrapper");
 		  if(printoutType == 'individual_record') {
-		    jqIframe.attr('src','?return=gui/printouts/record');
-		  } else {
-		    jqIframe.attr('src','?return=gui/printouts/records');
+		    jqIframe.attr('src','AppController.servlet?return=gui/printouts/record');
+		  } else if(printoutType == 'custom_template') {
+        jqIframe.attr('src','AppController.servlet?return=gui/printouts/custom_record');
+      } else
+		    jqIframe.attr('src','AppController.servlet?return=gui/printouts/records');
 		  }
 		}
 		
@@ -175,22 +177,35 @@
         }
 		
 		function fCreatePrintoutSelector(sCaption,fClick) {
-          oToolbar.appendChild(document.createTextNode(sCaption + ' '));
+      oToolbar.appendChild(document.createTextNode(sCaption + ' '));
 		  var oRadio = document.createElement('input');
 		  oRadio.setAttribute('type','radio');
 		  oRadio.setAttribute('name','printout_selector');
 		  oRadio.setAttribute('value','individual_record');
 		  oRadio.setAttribute('checked','true');
-          $(oRadio).click(fClick);
+      $(oRadio).click(fClick);
 		  oToolbar.appendChild(oRadio);
 		  oToolbar.appendChild(document.createTextNode(' individual record '));
 		  oRadio = document.createElement('input');
 		  oRadio.setAttribute('type','radio');
 		  oRadio.setAttribute('name','printout_selector');
 		  oRadio.setAttribute('value','report_rows');
-          $(oRadio).click(fClick);
+      $(oRadio).click(fClick);
 		  oToolbar.appendChild(oRadio);
 		  oToolbar.appendChild(document.createTextNode(' report rows '));
+      oRadio = document.createElement('input');
+      oRadio.setAttribute('type','radio');
+      oRadio.setAttribute('name','printout_selector');
+      oRadio.setAttribute('value','custom_template');
+      #if($report.getCustomTemplateName())
+        $(oRadio).click(fClick);
+        oToolbar.appendChild(oRadio);
+        oToolbar.appendChild(document.createTextNode('$report.getCustomTemplateName().replace("_"," ")');
+      #else
+        oRadio.setAttribute('disabled', 'true');
+        oToolbar.appendChild(oRadio);
+        oToolbar.appendChild(document.createTextNode(' no custom printout available '));
+      #end
 		}
         
         var oToolbar=document.createElement('div');
