--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
@@ -186,13 +186,6 @@
       $(oRadio).click(fClick);
 		  oToolbar.appendChild(oRadio);
 		  oToolbar.appendChild(document.createTextNode(' individual record '));
-		  oRadio = document.createElement('input');
-		  oRadio.setAttribute('type','radio');
-		  oRadio.setAttribute('name','printout_selector');
-		  oRadio.setAttribute('value','report_rows');
-      $(oRadio).click(fClick);
-		  oToolbar.appendChild(oRadio);
-		  oToolbar.appendChild(document.createTextNode(' report rows '));
       oRadio = document.createElement('input');
       oRadio.setAttribute('type','radio');
       oRadio.setAttribute('name','printout_selector');
@@ -206,6 +199,13 @@
         oToolbar.appendChild(oRadio);
         oToolbar.appendChild(document.createTextNode(' no custom printout available '));
       #end
+		  oRadio = document.createElement('input');
+		  oRadio.setAttribute('type','radio');
+		  oRadio.setAttribute('name','printout_selector');
+		  oRadio.setAttribute('value','report_rows');
+      $(oRadio).click(fClick);
+		  oToolbar.appendChild(oRadio);
+		  oToolbar.appendChild(document.createTextNode(' all report rows '));
 		}
         
         var oToolbar=document.createElement('div');
