Custom template printout: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
@@ -193,7 +193,7 @@
       #if($report.getCustomTemplateName())
         $(oRadio).click(fClick);
         oToolbar.appendChild(oRadio);
-        oToolbar.appendChild(document.createTextNode(' ' + $report.getCustomTemplateName().replace("_"," ") + ' '));
+        oToolbar.appendChild(document.createTextNode(' $report.getCustomTemplateName().replace("_"," ") '));
       #else
         oRadio.setAttribute('disabled', 'true');
         oToolbar.appendChild(oRadio);
