Custom template printout: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/custom_record.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/custom_record.vm
@@ -1,6 +1,6 @@
 #set($company = $view.getLoggedInUser().getCompany())
 #set($report = $sessionData.getReport())
-Report is $report<br>
+$viewTools.log("Report is $report")
 #set($customTemplateName = $report.getCustomTemplateName())
 #set($templateLocation = "uploads/${company.getInternalCompanyName()}/${report.getInternalReportName()}/$customTemplateName.vm")
 #parse($templateLocation)
