Custom template printout: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/custom_record.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/custom_record.vm
@@ -3,5 +3,5 @@
 $viewTools.log("Report is $report")
 #set($customTemplateName = $report.getCustomTemplateName())
 $viewTools.log("Custom template name is $customTemplateName")
-#set($templateLocation = "uploads/${company.getInternalCompanyName()}/${report.getInternalReportName()}/$customTemplateName.vm")
+#set($templateLocation = "uploads/${company.getInternalCompanyName()}/${report.getInternalReportName()}/${customTemplateName}.vm")
 #parse($templateLocation)
