--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -10,6 +10,9 @@
     #end
   #end
 #end
+<div class="pane1">
+  #parse('gui/reports_and_tables/report_list.vm')
+</div>
 <div class="breadcrumb_title">$report</div>
 #set($filterString = $sessionData.getGlobalFilterString($report))
 <div id="navrow">
