Include pane 1 in cards interface - override pane1 CSS

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -432,6 +432,15 @@ img.go_new {
   width: 250px;
 }
 
+/* Pane1 overrides */
 .pane1 h2 {
   height: auto;
+}
+
+.dependent_table h1 {
+  background: none;
+  font-style: normal;
+  margin-bottom: auto;
+  padding: auto;
+  text-align: left;
 }
