Include pane 1 in cards interface - override pane1 CSS

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -441,6 +441,6 @@ img.go_new {
   background: none;
   font-style: normal;
   margin-bottom: auto;
-  padding: auto;
+  padding: 0;
   text-align: left;
 }
