Include pane 1 in cards interface - override pane1 CSS

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
@@ -33,7 +33,7 @@
   <script src="resources/edit_nav/edit_nav.js" language="Javascript"></script>
   <script src="resources/edit_nav/slides.js" language="Javascript"></script>
 </head>
-<body style="overflow: visible"> ## override tabs.css
+<body style="overflow: hidden"> ## override tabs.css
   <div id="breadcrumb"></div>
   <div id="mini_app_header">#parse("gui/appstore/mini_app_header.vm")</div>
   <div id="levels"></div>
