Include pane 1 in cards interface - override pane1 CSS

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -284,7 +284,7 @@ a.jumpto_table.current {
   position: relative;
   background-color: #bdbdbd;
   height: 610px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .level {
