--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
@@ -24,11 +24,12 @@
   <title>
     $company forms
   </title>
-  <link type="text/css" href="resources/pane3_amalgam.css" rel="stylesheet" />
   <link type="text/css" href="resources/pane1_amalgam.css" rel="stylesheet" />
+  <link type="text/css" href="resources/pane3_amalgam.css" rel="stylesheet" />
   <link type="text/css" href="resources/edit_nav/edit_nav.css" rel="stylesheet" />
   <link type="text/css" href="resources/edit_nav/slides.css" rel="stylesheet" />
   <script src="resources/jquery.js" language="Javascript"></script>
+  <script src="resources/pane1_amalgam.js" language="Javascript"></script>
   <script src="resources/pane3_amalgam.js" language="Javascript"></script>
   <script src="resources/edit_nav/edit_nav.js" language="Javascript"></script>
   <script src="resources/edit_nav/slides.js" language="Javascript"></script>
