--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
@@ -24,7 +24,7 @@
   <title>
     $company forms
   </title>
-  ##<link type="text/css" href="resources/pane1_amalgam.css" rel="stylesheet" />
+  <link type="text/css" href="resources/pane1_amalgam.css" rel="stylesheet" />
   <link type="text/css" href="resources/pane3_amalgam.css" rel="stylesheet" />
   <link type="text/css" href="resources/edit_nav/edit_nav.css" rel="stylesheet" />
   <link type="text/css" href="resources/edit_nav/slides.css" rel="stylesheet" />
