Pane 1 behaviour in cards

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -427,9 +427,9 @@ img.go_new {
   padding-left: 250px;
 }
 
-.pane1 {
+ol#tree {
   position: fixed;
-  top: 40px;
+  top: 33px;
   left: 0;
   overflow-x: auto;
   height: 100%;
