--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -6,7 +6,7 @@ body{
 	font: 13px/1.5 Arial, Sans-serif;
 }
 
-	h1{
+	#tree h1{
 		position: relative; /* Fixes some obscure bug in IE */
 		padding: 5px 0 8px 10px;
 		background: #fff;
@@ -18,12 +18,12 @@ body{
 		text-align: right;
 	}
 	
-	h1 span {
+	#tree h1 span {
 		background: #fff;
 		padding: 0 10px;
 	}
 	
-	h2{
+	#tree h2{
 		display: block;
 		margin-bottom: -3px;
 		padding: 8px 10px 5px 5px;
@@ -36,7 +36,7 @@ body{
 		border-top: #CECECE 1px solid;
 	}
 	
-		h2 span{
+		#treeh2 span{
 			padding-left: 20px;
 			background-position: left;
 			background-repeat: no-repeat;
@@ -51,7 +51,7 @@ body{
 			background-image: url(expand.png);
 		}
 	
-		h2 img{
+		#tree h2 img{
 			vertical-align: middle;
 		}
 		
