--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -1,3 +1,4 @@
+#set($edit_nav = true)
 #set($report = $sessionData.getReport())
 #set($table = $report.getParentTable())
 #if($report.equals($table.getDefaultReport()))
