--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
@@ -108,7 +108,7 @@
     		<li id="$table.getInternalTableName()$report.getInternalReportName()">
     		  <div class="module-tree-item-wrap">
           #if($edit_nav)
-          <a class="report_tooltip" rel="AppController.servlet?return=gui/reports_and_tables/report_tooltip&set_custom_report=true&reportkey=tooltip_report&custominternalreportname=$report.getInternalReportName()">
+          <a class="report_tooltip" href="AppController.servlet?return=gui/edit_nav/report_including_content&set_table=$table.getInternalTableName()&set_report=$report.getInternalReportName()" rel="AppController.servlet?return=gui/reports_and_tables/report_tooltip&set_custom_report=true&reportkey=tooltip_report&custominternalreportname=$report.getInternalReportName()">
             $report
           </a>
           #else
