Pane 1 report click action in cards

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_including_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_including_content.vm
@@ -1,3 +1,6 @@
+#if(!$report)
+  #set($report = $sessionData.getReport())
+#end
 <div class="breadcrumb_title">$report</div>
 #set($filterString = $sessionData.getGlobalFilterString($report))
 <div id="navrow">
