Test set current pane 1 option in cards

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -299,6 +299,13 @@ a.jumpto_table.current {
   overflow: visible;
 }
 
+.report_including_content {
+  -moz-transition: all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
+  -ms-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
 .flyUp {
   top: -100px;
   /* height: 0px; */
