--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -22,6 +22,7 @@
   #end
 #end
 <div class="row_count">$rowCount</div>
+<div class="pane1_id">$table.getInternalTableName()$report.getInternalReportName()</div>
 <div class="related block centrebox" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&save_new_record=true&gtpb_override_relation_default_to_null=true">
   <span class="new"><img src="resources/toolbar/new.png"> add new $table.getSingularName()</span>
 </div>
