--- a/gtpb_clientside/WEB-INF/templates/boot.vm
+++ b/gtpb_clientside/WEB-INF/templates/boot.vm
@@ -15,18 +15,14 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-
-#parse("gui/resources/dashboard_enabled.vm")
-#if($dashboard_enabled)
-  #if($view.getLoggedInUser().getUserType() == "EXECUTIVE")
+#set($appUser = $view.getLoggedInUser())
+#set($userType = $appUser.getUserType())
+#set($apps = $appUser.getCompany().getApps())
+#if($apps.contains("dashboard") && $userType == "EXECUTIVE")
 	## Executives get the dashboard by default
 	#parse("gui/customisations/common/dashboard/dashboard.vm")
-  #else
-	## Note: reference to load_tabs.vm replaced
-	## so tabs don't load any more but also toolbar plugins don't load
-	## If we want to start using toolbar plugins again, we'll have to introduce them elsewhere
-    #parse("gui/display_application.vm")
-  #end
+#elseif($userType == "DATA_INPUT")
+  #parse("gui/edit_nav/edit_nav.vm")
 #else
   #parse("gui/display_application.vm")
 #end
