Debug related slides content

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
@@ -9,6 +9,8 @@
   <img class="rewind" src="resources/edit_nav/rewind.png" />
   <section class="middle"> 
     <div class="title">
+    Filter is $filters<br>
+    Report is $report<br>
     ##$dependentTable.getSimpleName()
     ##<select name="$dependentTable.getInternalTableName()_select">
     ##  #foreach($report in $linkingReports)
