Debug related slides content

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slide.vm
@@ -11,6 +11,7 @@
     <div class="title">
     Filter is $filters<br>
     Report is $report<br>
+    ReportDataRows is $reportDataRows<br>
     ##$dependentTable.getSimpleName()
     ##<select name="$dependentTable.getInternalTableName()_select">
     ##  #foreach($report in $linkingReports)
